--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,19 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   #Firebase Authentication
-  google_sign_in: 4.5.6
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.0+1
+  google_sign_in: ^5.1.0
+  firebase_auth: ^1.1.4
   flutter_facebook_login: ^3.0.0
   
 
   # state management
-  provider: ^4.3.2+2
+  provider: ^5.0.0
     
   # UI
   flutter_launcher_icons: ^0.8.0
@@ -39,8 +38,6 @@ dependencies:
   sliding_up_panel: ^1.0.2
   draggable_bottom_sheet: ^0.1.1
   curved_navigation_bar: ^0.3.7
-  image_picker: ^0.6.7+21
-  custom_dialog: ^0.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
