--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,13 @@ dependencies:
   #Firebase Authentication
   google_sign_in: ^5.1.0
   firebase_auth: ^1.1.4
+  # google_sign_in: ^4.5.9
+  # firebase_auth: ^0.20.1
+  firebase_core: ^1.7.0
   
 
   # state management
+  # provider: ^4.3.3
   provider: ^5.0.0
     
   # UI
