--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,17 +18,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   #Firebase Authentication
-  google_sign_in: ^5.1.0
-  firebase_auth: ^1.1.4
+  google_sign_in: ^5.0.4
+  firebase_auth: ^1.4.1
   # google_sign_in: ^4.5.9
   # firebase_auth: ^0.20.1
-  firebase_core: ^1.7.0
+  firebase_core: ^1.3.0
+  firebase_database: ^8.0.0
   
 
   # state management
@@ -45,7 +46,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
 
 flutter_icons:
   android: true
