--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,9 @@ dependencies:
   #Firebase Authentication
   google_sign_in: ^5.0.4
   firebase_auth: ^1.4.1
-  # google_sign_in: ^4.5.9
-  # firebase_auth: ^0.20.1
   firebase_core: ^1.3.0
   firebase_database: ^8.0.0
+  # flutter_facebook_login: ^3.0.0
   
 
   # state management
