--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^1.4.1
   firebase_core: ^1.3.0
   firebase_database: ^8.0.0
+  flutter_signin_button: ^1.0.0
   # flutter_facebook_login: ^3.0.0
   
 
