--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,7 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_database: ^8.0.0
   flutter_signin_button: ^1.0.0
-  # flutter_facebook_login: ^3.0.0
-  
+  # flutter_login_facebook: ^1.1.0
 
   # state management
   # provider: ^4.3.3
